# ffmpeg_encode_c

./: CMakeLists.txt  main.c
